--- a/docs/tex/1-wprowadzenie.tex
+++ b/docs/tex/1-wprowadzenie.tex
@@ -28,10 +28,10 @@ Jednocześnie automatyzacja generowania IaC rodzi pytania o poprawność i bezpi
 Praca składa się z dziewięciu rozdziałów, odzwierciedlających pełny cykl badawczy:
 \begin{itemize}
     \item \textbf{Rozdział 1 – Wprowadzenie}: przedstawienie tematu, celów, motywacji oraz układu pracy,
-    \item \textbf{Rozdział 2 – Przegląd literatury}: analiza aktualnych badań nad wykorzystaniem LLM w generowaniu konfiguracji IaC (Docker, Kubernetes) oraz identyfikacja luk w   istniejącej wiedzy,
+    \item \textbf{Rozdział 2 – Przegląd literatury}: analiza aktualnych badań nad wykorzystaniem LLM w generowaniu konfiguracji IaC (Docker, Kubernetes) oraz identyfikacja luk w istniejącej wiedzy,
     \item \textbf{Rozdział 3 – Przegląd technologii i narzędzi}: opis wybranych modeli językowych, technologii infrastrukturalnych oraz porównanie podejść API vs open-source,
-    \item \textbf{Rozdział 4 – Eksperymenty}: opis przypadków testowych, strategii promptowania oraz procesu generowania i testowania konfiguracji,
-    \item \textbf{Rozdział 5 – Analiza porównawcza modeli LLM}: przedstawienie kryteriów oceny, wyników testów oraz wniosków dotyczących jakości działania modeli,
+    \item \textbf{Rozdział 4 – Projekt eksperymentów}: opis przypadków testowych, strategii promptowania oraz procesu generowania i testowania konfiguracji; przedstawienie kryteriów oceny,
+    \item \textbf{Rozdział 5 – Analiza porównawcza modeli LLM}: przedstawienie wyników testów oraz wniosków dotyczących jakości działania modeli,
     \item \textbf{Rozdział 6 – Bezpieczeństwo konfiguracji}: analiza zagrożeń związanych z automatyczną generacją IaC, technik ataku na LLM oraz metod oceny bezpieczeństwa wygenerowanych plików,
     \item \textbf{Rozdział 7 – Projekt systemu PaaS}: opis architektury systemu oraz procesu automatycznego wdrażania aplikacji na podstawie repozytorium kodu,
     \item \textbf{Rozdział 8 – Implementacja i wdrożenie prototypu}: opis realizacji systemu PaaS, wykorzystanych technologii oraz przykładowych wdrożeń,
