--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -119,6 +119,8 @@ Przykładowo, jeśli w manifeście użyto domyślnej przestrzeni nazw (co jest u
 
 Istotnym elementem wdrożeniowym GenKubeSec jest to, że działa on w oparciu o lokalnie uruchomiony model LLM, a nie poprzez zapytania do zewnętrznego API modelu. Dzięki temu rozwiązanie minimalizuje ryzyko wycieku danych wrażliwych – pliki konfiguracyjne (które mogą zawierać np. informacje o architekturze systemu, nazwy usług, a nawet niektóre dane dostępowe) nie są nigdzie wysyłane, co mogłoby stwarzać zagrożenie bezpieczeństwa lub prywatności. Twórcy podkreślają tę zaletę, zauważając że wiele firm obawia się korzystać z chmurowych API LLM właśnie z uwagi na konieczność przesyłania swojej konfiguracji na zewnątrz. GenKubeSec pokazuje, że możliwe jest skuteczne połączenie technik uczenia maszynowego z praktycznymi wymaganiami bezpieczeństwa w środowisku korporacyjnym.
 
+Obserwacje z tych badań posłużą jako podstawa do zaprojektowania mechanizmu iteracyjnej walidacji i korekty generowanych konfiguracji w niniejszej pracy.
+
 \subsection{Bezpieczeństwo zastosowań LLM w IaC}
 
 Bezpieczeństwo jest jednym z kluczowych aspektów przy wdrażaniu dużych modeli językowych do praktyk DevOps i Infrastructure as Code. W literaturze wskazuje się szereg zagrożeń, które mogą pojawić się zarówno po stronie jakości generowanego kodu, jak i podatności samych aplikacji wykorzystujących LLM.
@@ -147,7 +149,7 @@ Z drugiej strony, pojawia się szereg wyzwań i ryzyk, które należy rozważyć
 
 \textbf{Bezpieczeństwo i zgodność:} Paradoksalnie, narzędzia służące poprawie bezpieczeństwa (jak GenKubeSec) same muszą być zaadresowane pod kątem bezpieczeństwa. Jedno zagrożenie to kwestia poufności danych – jeśli korzystamy z zewnętrznej usługi LLM (np. API chmurowego), musimy wysłać do niej nasze pliki konfiguracyjne, które mogą zawierać wrażliwe informacje o systemie. W środowiskach korporacyjnych często jest to nieakceptowalne, dlatego preferowane może być użycie lokalnych instancji modeli \cite{malul_genkubesec_2024}. Kolejna sprawa to bezpieczeństwo generowanych konfiguracji: model może nieświadomie zaproponować ustawienia z lukami (np. kontener uruchamiany z uprawnieniami root, brak szyfrowania komunikacji, itp.). Wygenerowany kod koniecznie musi przejść przez standardowe procedury audytu bezpieczeństwa tak samo, jak kod pisany ręcznie.
 
-\textbf{Niezawodność i deterministyczność:} Modele językowe mogą dawać różne wyniki na podstawie nawet subtelnych różnic w promptach. Oznacza to, że proces generowania konfiguracji może być nie zawsze powtarzalny – dwie iteracje mogą wygenerować nieco inny manifest. W kontekście IaC oczekujemy deterministycznych rezultatów. Konieczne jest więc odpowiednie strojenie parametrów modelu (np. temperature=0) oraz standaryzacja promptów, by wyniki były jak najbardziej spójne i przewidywalne. Dodatkowo, jeśli integrujemy LLM w potoki CI/CD, musimy brać pod uwagę jego dostępność i czas odpowiedzi – model pracujący na dużym manifeście może mieć opóźnienia lub być ograniczony limitami API.
+\textbf{Niezawodność i deterministyczność:} Modele językowe mogą dawać różne wyniki na podstawie nawet subtelnych różnic w promptach. Oznacza to, że proces generowania konfiguracji może być nie zawsze powtarzalny – dwie inferencje mogą wygenerować nieco inny manifest. W kontekście IaC oczekujemy deterministycznych rezultatów. Konieczne jest więc odpowiednie strojenie parametrów modelu (np. temperature=0) oraz standaryzacja promptów, by wyniki były jak najbardziej spójne i przewidywalne. Dodatkowo, jeśli integrujemy LLM w potoki CI/CD, musimy brać pod uwagę jego dostępność i czas odpowiedzi – model pracujący na dużym manifeście może mieć opóźnienia lub być ograniczony limitami API.
 
 \subsection{Podsumowanie}
 
@@ -155,4 +157,4 @@ Podsumowując, literatura wskazuje, że duże modele językowe posiadają już z
 
 Jednocześnie jednak żadne z rozwiązań nie jest pozbawione wad. Wyzwania związane z halucynacjami modeli \cite{low_repairing_2024}, koniecznością walidacji wyników \cite{ueno_migrating_2024, kon_iac-eval_nodate} i zapewnieniem bezpieczeństwa \cite{malul_genkubesec_2024, fu_security_2025} wskazują, że rola człowieka (eksperta DevOps) wciąż pozostaje ważna jako nadzorcy i korektora działania AI. Dlatego bieżące badania kierują się ku metodom łączenia silnych stron LLM z mechanizmami kontrolnymi – np. stosowanie podejścia human-in-the-loop \cite{low_repairing_2024}, rozwijanie benchmarków oceny jakości (aby móc mierzyć postępy i porównywać modele) \cite{ueno_migrating_2024, kon_iac-eval_nodate}, eksplorowanie technik prompt engineering \cite{kratzke_dont_2024, pujar_invited_2023}, a także opracowanie metod ochrony przed atakami prompt injection \cite{liu_prompt_2024}, które zmniejszą skłonność modeli do popełniania typowych błędów lub podatności.
 
-Niniejsza praca magisterska wpisuje się w ten nurt, koncentrując się na zbudowaniu automatycznego narzędzia do generowania konfiguracji Docker i Kubernetes wyłącznie na podstawie repozytorium kodu źródłowego, bez udziału człowieka. W ramach pracy zostanie przeprowadzona analiza i porównanie skuteczności różnych dużych modeli językowych w tym zadaniu. Szczególny nacisk położony będzie na bezpieczeństwo generowanej konfiguracji, poprawność składniową i funkcjonalną manifestów oraz na analizę potencjalnych zagrożeń, takich jak ataki typu prompt injection czy przez złośliwie spreparowane repozytoria. Ostatecznie projekt zostanie rozszerzony o prototyp systemu typu PaaS, umożliwiającego automatyczne wdrażanie aplikacji na podstawie kodu źródłowego, bez konieczności ingerencji człowieka.
+Niniejsza praca magisterska wpisuje się w ten nurt, koncentrując się na zbudowaniu automatycznego narzędzia do generowania konfiguracji Docker i Kubernetes wyłącznie na podstawie repozytorium kodu źródłowego, bez udziału człowieka, popartego mechanizmami weryfikacji i pętli sprzężenia zwrotnego. W ramach pracy zostanie przeprowadzona analiza i porównanie skuteczności różnych dużych modeli językowych w tym zadaniu. Szczególny nacisk położony będzie na bezpieczeństwo generowanej konfiguracji, poprawność składniową i funkcjonalną manifestów oraz na analizę potencjalnych zagrożeń, takich jak ataki typu prompt injection czy przez złośliwie spreparowane repozytoria. Ostatecznie projekt zostanie rozszerzony o prototyp systemu typu PaaS, umożliwiającego automatyczne wdrażanie aplikacji na podstawie kodu źródłowego, bez konieczności ingerencji człowieka.
